ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeffer-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3001

      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 3003
